--- a/tutorials/pad.ipynb
+++ b/tutorials/pad.ipynb
@@ -538,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specialist Cap"
+    "### Assuming Specialist Capacity = 2 patients/day"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specialist Unlimited"
+    "### Assuming Specialist Capacity = Unlimited"
    ]
   },
   {
