Update input path

--- a/tutorials/pad.ipynb
+++ b/tutorials/pad.ipynb
@@ -41,7 +41,7 @@
     "import pad\n",
     "\n",
     "# Patient properties + model predictions\n",
-    "PATH_TO_INPUT_FOLDER = '../input/pad/'\n",
+    "PATH_TO_INPUT_FOLDER = '../secure/pad/'\n",
     "PATH_TO_DL_MODEL = os.path.join(PATH_TO_INPUT_FOLDER, 'dl.csv')\n",
     "PATH_TO_RF_MODEL = os.path.join(PATH_TO_INPUT_FOLDER, 'rf.csv')\n",
     "PATH_TO_LR_MODEL = os.path.join(PATH_TO_INPUT_FOLDER, 'lr.csv')\n",
@@ -51,6 +51,107 @@
     "# Workflows\n",
     "PATH_TO_NURSE_YAML = '../workflows/pad_nurse.yaml'\n",
     "PATH_TO_DOCTOR_YAML = '../workflows/pad_doctor.yaml'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conceptual Overview\n",
+    "\n",
+    "### Simulation\n",
+    "\n",
+    "We use discrete event simulation to simulate our clinical workflow $W$. \n",
+    "\n",
+    "In other words, we represent the world as occuring through a set of discrete, evenly spaced timesteps $\\lambda = 0, 1,...,N$. Each timestep $\\lambda$ could represent a second, minute, hour, day, etc., the interpretation is up to the user.\n",
+    "\n",
+    "Events $A$ and $B$ that occur within the same timestep $\\lambda$ can have arbitrary ordering if there does not exist a strict $A \\rightarrow B$ or $B \\rightarrow A$ dependency between these events. In other words, if 3 patients have an MRI and 2 patients have a blood test on timestep $\\lambda = 3$, then assuming none of these events are dependent on each other, the ordering in which the blood tests and MRIs occur will be random.\n",
+    "\n",
+    "A **\"duration\"** refers to a number of timesteps (i.e. a length of time).\n",
+    "\n",
+    "### Workflow\n",
+    "A workflow $W$ is simply a set of states $S$.\n",
+    "\n",
+    "### States\n",
+    "Each state $s \\in S$ has associated with it:\n",
+    "1. A duration $\\lambda_s$ representing how many timesteps an agent will wait in this state before transitioning to another state\n",
+    "2. A set of utilities $U_s$\n",
+    "3. A set of resource deltas $R_s \\subseteq R$ that specify how various resources $r \\in R_s$ change when an agent arrives at this state\n",
+    "4. A set of transitions $T_s \\subseteq T$\n",
+    "5. A type $\\tau_s \\in \\{\\text{start}, \\text{normal}, \\text{end}\\}$. \n",
+    "\n",
+    "Invariants:\n",
+    "* $|\\{ s \\in S | \\tau_s = \\text{start} \\}| = 1$\n",
+    "* $ \\forall s \\in S$ such that $\\tau_s = \\text{start}, |T_s| > 0$\n",
+    "* $ \\forall s \\in S$ such that $\\tau_s = \\text{normal}, |T_s| > 0$\n",
+    "* $ \\forall s \\in S$ such that $\\tau_s = \\text{end}, |T_s| = 0$\n",
+    "\n",
+    "### Transitions\n",
+    "Given the set of all transitions $T$, each transition $t \\in T_s \\subseteq T$ has associated with it:\n",
+    "1. A source state $s \\in S$\n",
+    "1. A destination state $s' \\in S$ (where $s'$ could be the same as $s$)\n",
+    "1. A duration $\\lambda_t$ representing how many timesteps an agent will wait, after having chosen this transition $t$, before moving to state $s'$\n",
+    "2. A condition $c_t \\in C$ that, only when TRUE, allows the agent to take this transition $t$ to state $s'$\n",
+    "2. A set of utilities $U_t$\n",
+    "3. A set of resource deltas $R_t \\subseteq R$ that specify how various resources $r \\in R_t$ change after an agent takes this transition\n",
+    "\n",
+    "### Utilities\n",
+    "Given the set of all utilities $U$, each utility $u \\in U$ has associated with it:\n",
+    "1. A value $u_v \\in \\mathbb{R}$ representing the numeric value of this utility\n",
+    "1. A unit $u_u$ (i.e. QALYs, US dollars, years, etc.)\n",
+    "1. A condition $c_u \\in C$ that, only when TRUE, has the simulation record that this utility value $u_v$ for unit $u_u$ was achieved\n",
+    "\n",
+    "### Conditions\n",
+    "A condition $c \\in C$ determines whether a utility or transition can be taken. A condition $c$ can take the form of either:\n",
+    "1. A probability (in which case $\\{ c \\in \\mathbb{R} | 0 \\le c \\le 1 \\}$); OR\n",
+    "1. An arbitrary Python expression which evaluates to TRUE or FALSE\n",
+    "\n",
+    "### Resources\n",
+    "A resource $r \\in R$ is a constrained resource that is shared across all patients. This represents a hospital-level constraint of a workflow (i.e. fiscal budget, number of nurses, MRI machine availability, etc.). Each resource $r$ has associated with it:\n",
+    "1. A level $r_l \\in \\mathbb{N}$ which represents the current value of the resource\n",
+    "1. An initial amount $r_i \\in \\mathbb{N}$ which ensures $r_l = r_i$ when $\\lambda = 0$\n",
+    "1. An maximum capacity $r_m \\in \\mathbb{N}$ which ensures that $r_l \\le r_m$\n",
+    "1. A refill amount $r_a \\in \\mathbb{N}$ that represents how much this resource gets increased after $\\lambda_r$ timesteps have elapsed since the last refill\n",
+    "1. A refill duration $\\lambda_r \\in \\mathbb{N}$ that represents how many timesteps must elapse before the resource is increased to a value of $\\max{r_l + r_a, r_m}$\n",
+    "\n",
+    "**!! Important Note !!** In order to decrement a resource, you need to specify a **resource delta** on the relevant state/transition. Otherwise, if you just require that `nurse_capacity > 0` for a transition, then the simulation will not automatically decrement `nurse_capacity` by 1 when that transition is taken (which can be surprising to some users). This is often a cause of infinite loops, or situations where changing the $r_i$, $r_m$, or $r_a$ of a resource has no effect on the model's achieved utility.\n",
+    "\n",
+    "### Patients\n",
+    "Each patient $p \\in P$ has associated with it:\n",
+    "1. A start timestep $\\lambda_p$ representing the timestep of the simulation at which the patient began progressing through the workflow (i.e. the day that the patient was admitted to the hospital)\n",
+    "1. A current state $s_p \\in S$. The patient always starts at a state $s_p$ where $\\tau_{s_p} = \\text{start}$\n",
+    "2. A set of **properties** $\\Rho_p$ which can be anything (integers, floats, strings, dictionaries, lists, etc.)\n",
+    "3. A **history** object $H_p$ which captures all of the past states, transitions, and utilities that the patient achieved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a Simulation\n",
+    "\n",
+    "Each patient $p$ starts his/her workflow at the state $s$, where $\\tau_s = \\text{start}$. Note: This is the same for all patients\n",
+    "\n",
+    "Each patient $p$ starts his/her workflow at timestep $\\lambda_p$. Note: This varies across all patients.\n",
+    "\n",
+    "Each patient $p$ then progresses through the states of the workflow, according to the applicable transitions and conditions. The patient stops their journey when either of the following conditions are met:\n",
+    "* The patient reaches a state $s$ where $\\tau_s = \\text{end}$; OR\n",
+    "* The simulation is terminated prematurely after a set number of timesteps have occured"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the Workflow\n",
+    "\n",
+    "We use a **YAML** file to specify our ACP workflow.\n",
+    "\n",
+    "In this YAML file, we include all of the states, transitions, utilities, and variables relevant to the workflow that we want to simulate.\n",
+    "\n",
+    "An example file can be found in `workflows/pad_doctor.yaml` and `workflows/pad_nurse.yaml`.\n",
+    "\n",
+    "The schema for creating these YAML files for arbitrary workflows can be found in `workflows/schema.yaml`"
    ]
   },
   {
